--- a/submission/index.html
+++ b/submission/index.html
@@ -83,7 +83,9 @@
     </pre>
 
 
-    <p style="font-family:'Times New Roman', Times, serif; font-size:30px;"><strong>15. This line is written in 'Times' font having 30 pixels size</strong></p>
+    <p style="font-family: Times; font-size: 30px;">15. This line is written in 'Times' font having 30 pixels size</p>
+    <br>
+
 
     16. Simple Table
     <table style="border:1px solid">
